# recruit_ai

./: .env.example  .gitignore  AGENTIC_AI_SYSTEM.md  DEPLOYMENT_GUIDE.md  Dockerfile  EMAIL_SETUP_INSTRUCTIONS.md  README.md  create_prompts_table.py  docker-compose.share.yml  env_template.txt  generate_ndcg_doc.py  insta.md  interview_db.py  linkdin_naukri_api.md  main.py  ndcg.docx  ndcg.md  nginx.conf.example  pyproject.toml  requirements.txt  results.md  run_interview_api.py  run_settings_api.py  run_shortlisting_api.py  run_upload_api.py  schema_dump.txt  start_all.bat  wsgi.py
.agent/workflows/: deploy_on_nginx.md
agents/: __init__.py
agents/interview/: .gitignore  api.py  interview_database.py  notification_api.py
agents/jobdescription/: __init__.py  jdParsing.py  main.py  package-lock.json  profileStore.py  requirements.txt
agents/resumeandmatching/: config.py  database.db  main.py  requirements.txt
agents/shortlisting/: api.py  interview_agent.py  main.py  prompt_manager.py  requirements.txt  shortlisting_database.py  test_agent.py  test_codeforces_integration.py  (+2 more)
backend/: agent_orchestrator.py  analytics_api.py  default_prompts.json  email_service.py  interview.db  monitoring_feedback_agent.py  prompt_manager.py  prompts.db  resume_matching_agent.py  selected_candidates.db  selected_candidates.db-shm  selected_candidates.db-wal  settings_api.py  social_media_service.py  upload_api.py  userids.db
docs/: SHARING_WITH_NGINX.md
front/: .env.example  package-lock.json  package.json  vite.config.js
output/: test.json
tests/: test_social_media.py
(+44 files in other folders)
