[project]
name = "recruit-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb>=1.5.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "gunicorn>=25.1.0",
    "langgraph>=1.0.9",
    "openai>=2.21.0",
    "pymongo>=4.16.0",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "waitress>=3.0.2",
    "watchdog>=6.0.0",
]
